# hello-django-vite

./: .gitignore  LICENSE  README.md  manage.py  package-lock.json  package.json  pyproject.toml  vite.config.js
apps/code/: apps.py  urls.py  views.py
apps/code/templates/code/: code.html
apps/main/: asgi.py  settings.py  urls.py  wsgi.py
apps/main/management/commands/: runserver.py
apps/main/templatetags/: env.py
apps/tools/vite/: apply_django_vite_patches.py  asset_loader.py.diff
static/code/: code.css  code.js  my_code.js
static/code/imgs/: boulder-LICENSE.txt  logomark-LICENSE.txt
static/code/panels/: project.css  project.js
